@@ -1,0 +1,20 @@
+>chr1
+ATGCATGC
+>2
+ATGCATGC
+>chrX
+ATGCATGC
+>Y
+ATGCATGC
+>M
+ATGCATGC
+>MT
+ATGCATGC
+>chrM
+ATGCATGC
+>chrMT
+ATGCATGC
+>m
+ATGCATGC
+>MM
+ATGCATGC
